--- a/less/all.less
+++ b/less/all.less
@@ -4,6 +4,16 @@
 * some necessary CSS for mobilebone.js
 * good luck for U, ^_^
 **/
+@font-size-base:          14px;
+@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
+@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
+
+@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
+@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
+@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h5:            @font-size-base;
+@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
 a, img {
   -webkit-touch-callout: none;
 }
@@ -23,6 +33,187 @@ ul, li {
   list-style: none;
 //  margin: 0;
   padding: 0;
+}
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-track {
+  background-color: #ddd;
+  border-radius: 6px;
+}
+.display-inline-block {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+}
+// 文本显示
+.text {
+  font-size: @font-size-base; // 14px
+}
+.text-lg {
+  font-size: @font-size-large; // 18px
+}
+.text-sm {
+  font-size: @font-size-small; // 12px
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.text-center {
+  text-align: center;
+}
+.text-justify {
+  text-align: justify;
+  text-justify:distribute;
+}
+.text-nowrap {
+  white-space: nowrap;
+}
+.text-wrap {
+  word-wrap:break-word;
+}
+.text-lowercase {
+  text-transform:lowercase;
+}
+.text-uppercase {
+  text-transform:uppercase;
+}
+.text-capitalize {
+  text-transform:capitalize;
+}
+.text-overflow {
+  text-overflow:ellipsis; white-space:nowrap; overflow:hidden;
+}
+.text-normal {
+  font-weight:normal; font-style:normal;
+}
+.text-bold {
+  font-weight:bold;
+}
+.text-italic {
+  font-style:italic;
+}
+// row布局
+.row {
+  &-inline-block {
+    font-size:1em;
+    letter-spacing:-.25em;
+    font-family:Arial;
+    .col {
+      .display-inline-block;
+      letter-spacing: 0;
+      vertical: top;
+    }
+  }
+  &-justify {
+    font-size:1em;
+    letter-spacing:-.25em;
+    font-family:Arial;
+    .text-justify;
+    .col {
+      .display-inline-block;
+      letter-spacing: 0;
+      vertical-align: top;
+      &-left {
+        line-height: 0;
+        height: 0;
+        border-top-width: 0;
+        border-bottom-width: 0;
+        overflow:hidden;
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top:0;
+        margin-bottom: 0;
+      }
+      &-fix {
+        .display-inline-block;
+        letter-spacing: 0;
+        vertical: top;
+        width:100%;
+        height:0;
+        line-height: 0;
+        font-size:0;
+        padding:0;
+        margin:0;
+        border:0;
+        overflow: hidden;
+      }
+    }
+  }
+  &-float {
+    .clearfix;
+    .col {
+      .l;
+    }
+  }
+  &-1 {
+    > .col {
+      width: unit(100 / 1, %);
+    }
+  }
+  &-2 {
+    > .col {
+      width: unit(100 / 2, %);
+    }
+  }
+  &-3 {
+    > .col {
+      width: unit(100 / 3, %);
+    }
+  }
+  &-4 {
+    > .col {
+      width: unit(100 / 4, %);
+    }
+  }
+  &-5 {
+    > .col {
+      width: unit(100 / 5, %);
+    }
+  }
+  &-6 {
+    > .col {
+      width: unit(100 / 6, %);
+    }
+  }
+  &-7 {
+    > .col {
+      width: unit(100 / 7, %);
+    }
+  }
+  &-8 {
+    > .col {
+      width: unit(100 / 8, %);
+    }
+  }
+  &-9 {
+    > .col {
+      width: unit(100 / 9, %);
+    }
+  }
+  &-10 {
+    > .col {
+      width: unit(100 / 10, %);
+    }
+  }
+  &-11 {
+    > .col {
+      width: unit(100 / 11, %);
+    }
+  }
+  &-12 {
+    > .col {
+      width: unit(100 / 12, %);
+    }
+  }
 }
 .page {
   position: absolute; left: 0; top: 0;
@@ -826,7 +1017,7 @@ a {
 .list {
   a {
     display: block;
-    line-height: 32px;
+    line-height: 44px;
     padding-left: .5em;
     margin-top: -1px;
     border-top: 1px solid #ccc;
