--- a/less/wx.less
+++ b/less/wx.less
@@ -21,7 +21,7 @@ body {
   width: 48px;
   height: 48px;
   background-size: 48px 144px;
-  background-image: url(../imgs/icon-header.png);
+  background-image: url('../imgs/wx/icon-header.png');
 }
 .icon-add {
   background-position: 0 -48px;
@@ -40,7 +40,7 @@ body {
   }
 }
 .icon-wx, .icon-contact, .icon-find, .icon-me {
-  background-image: url('../imgs/icon-footer.png');
+  background-image: url('../imgs/wx/icon-footer.png');
   background-size: 35px 280px;
   text-align: center;
   height: 35px;
@@ -59,7 +59,7 @@ body {
   background-position: center -210px;
 }
 .icon-friend, .icon-scan ,.icon-shake , .icon-near, .icon-bottle, .icon-shopping, .icon-game {
-  background-image: url('../imgs/icon-find.png');
+  background-image: url('../imgs/wx/icon-find.png');
   -webkit-background-size: 28px 210px;
   background-size: 28px 210px;
   width: 28px;
@@ -85,7 +85,7 @@ body {
 }
 
 .icon-albums, .icon-storage, .icon-wallet, .icon-settings {
-  background-image: url('../imgs/icon-me.png');
+  background-image: url('../imgs/wx/icon-me.png');
   -webkit-background-size: 28px 120px;
   background-size: 28px 120px;
   width: 28px;
@@ -113,7 +113,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-//  z-index: 1;
+  z-index: 1;
   overflow: hidden;
   h1 {
     line-height: 48px;
