--- a/less/qq.less
+++ b/less/qq.less
@@ -231,6 +231,50 @@ body {
 .icon-shfw {
   background-position: -36px 0px;
 }
+.icon-contactArrow {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  margin-top: -5px;
+  display: block;
+  width: 10px;
+  height: 10px;
+  background: url(../imgs/qq/contact_arrow.jpg) no-repeat;
+  background-size: 10px auto;
+  -webkit-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+.icon-hydt, .icon-fj, .icon-xqbl {
+  display: block;
+  width: 36px;
+  height: 36px;
+  margin: 16px auto 8px;
+  background: url(../imgs/qq/sprite_qzone.png) no-repeat;
+  background-size: 111px auto;
+}
+.icon-hydt {
+  width: 39px;
+}
+.icon-fj {
+  background-position: -39px 0px;
+}
+.icon-xqbl {
+  background-position: -75px 0px;
+}
+
+.icon-right-arrow {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  margin-top: -7px;
+  display: block;
+  width: 14px;
+  height: 14px;
+  background: url(../imgs/qq/commListArrow.png) no-repeat;
+  background-size: 14px auto;
+}
 //************************
 .btn-group {
   display: inline-block;
@@ -382,6 +426,8 @@ body {
   height: 48px;
   background: #EBECED;
   overflow: hidden;
+  position: relative;
+  z-index: 1;
   &-input {
     display: block;
     background: #FFF;
@@ -454,9 +500,87 @@ body {
   background-color: #fff;
   height: 85px;
 }
-.dl-contact-list {
-  dd {
-    padding: 0;
+.friend-list {
+  margin: 0;
+  background: #fff;
+  &-wrap {
+
+  }
+  &-h5 {
+    padding-left: 10px;
+    line-height: 25px;
+    font-size: 12px;
+    color: #808080;
+    font-weight: 400;
     margin: 0;
   }
+  & > dt {
+    position: relative;
+    height: 44px;
+    line-height: 44px;
+    border-bottom: 1px solid #C8C7CC;
+    font-size: 15px;
+    > strong {
+      position: absolute;
+      left: 45px;
+      right: 100px;
+      top: 0;
+    }
+    > span {
+      float: right;
+      padding-right: 10px;
+      font-size: 12px;
+      color: #777;
+    }
+  }
+  & > dd {
+    padding: 0;
+    margin: 0;
+    display: none;
+  }
+  &.open {
+    & > dt > .icon-contactArrow {
+      -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+      -o-transform: rotate(90deg);
+      transform: rotate(90deg);
+    }
+    & > dd {
+      display: block;
+    }
+  }
+}
+
+.links-qzone {
+  margin-top: 20px;
+  border-top: 1px solid #DEDFE0;
+  background-color: #fff;
+  & > .links-a {
+    padding: 8px 10px;
+    position: relative;
+    display: block;
+    border-bottom: 1px solid #DEDFE0;
+    h5 {
+      display: block;
+      padding-top: 5px;
+      font-size: 15px;
+      color: #090909;
+      margin: 0;
+    }
+  }
+  &-img {
+    width: 28px;
+    height: 28px;
+    border-radius: 28px;
+    margin-right: 10px;
+  }
+}
+.mask-black {
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  width: 100%;
+//  height: 100%;
+//  background: rgba(0, 0, 0, 0.3);
+//  z-index: 1;
 }
