--- a/framework/less/btn.less
+++ b/framework/less/btn.less
@@ -120,17 +120,17 @@
 //  color: white; }
 .btn {
   display: block;
-  .theme-color;
+  .theme-highlight-color;
   border: 1px solid;
-  .theme-bd;
+  .theme-highlight-bd;
   text-align: center;
   border-radius: 5px;
   line-height: 27px;
   height: 29px;
   font-size: 14px;
   &.active {
-    .theme-bg;
-    .theme;
+    .theme-highlight-bg;
+    .color-white;
   }
   &-link {
     border: none;
@@ -146,9 +146,9 @@
     height: 44px;
     line-height: 42px;
   }
-  &[class*=theme-bg] {
+  &[class*=bg-] {
     border: none;
-    .theme;
+    .color-white;
   }
   &-group {
     .df;
