--- a/framework/less/grid.less
+++ b/framework/less/grid.less
@@ -30,8 +30,9 @@
     }
     .grid-col {
       float: left;
+      margin-bottom: 15px;
       .grid-in {
-        background: red;
+        //background: red;
         margin-right: 15px;
       }
     }
