--- a/framework/less/list.less
+++ b/framework/less/list.less
@@ -1,12 +1,13 @@
 .list {
-  background: #fff;
+  .theme-bg-ul;
+  .theme-gray-dark;
   position: relative;
   overflow: hidden;
   &:before {
-    .bd-top;
+    .theme-bd-dark-top;
   }
   &:after {
-    .bd-bottom;
+    .theme-bd-dark-bottom;
   }
   &-group {
     margin-top: -1px;
@@ -65,11 +66,10 @@
     margin-bottom: -1px;
     position: relative;
     &:after {
-      .bd-bottom;
+      .theme-bd-dark-bottom;
     }
   }
   &-title {
-    color: #000;
     font-size: 17px;
     .ell;
   }
@@ -82,9 +82,9 @@
   &-divider {
     font-size: 17px;
     &:before {
-      .bd-top;
+      .theme-bd-dark-top;
     }
-    background: #F7F7F7;
+    .theme-bg-divider;
     margin-top: -1px;
     padding: 4px 15px;
     white-space: nowrap;
