--- a/framework/less/box.less
+++ b/framework/less/box.less
@@ -2,6 +2,7 @@
   margin-top: 0;
   margin-bottom: 0;
   display: block;
+  .theme-gray-light;
   &-lg {
     margin-top: 15px;
     margin-bottom: 15px;
