--- a/framework/less/reset.less
+++ b/framework/less/reset.less
@@ -10,7 +10,7 @@ body {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 .page {
-  .layout-body;
+  .theme-bg-main;
 }
 
 ul, li {
