--- a/framework/less/btn.less
+++ b/framework/less/btn.less
@@ -157,6 +157,7 @@
     .jcfs;
     .btn {
       width: 100%;
+      .f1;
       white-space: nowrap;
       box-sizing: border-box;
       padding: 0 10px;
