--- a/framework/less/lib.less
+++ b/framework/less/lib.less
@@ -1,4 +1,12 @@
 // lib
+.clearfix {
+  *zoom: 1;
+  &:after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
 .ell {
   overflow: hidden;
   text-overflow: ellipsis;
