--- a/framework/less/all.less
+++ b/framework/less/all.less
@@ -650,8 +650,7 @@
     }
   }
 }
-.main {
-  //.f1;
+.page-fix {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -669,8 +668,13 @@
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  width: 100%;
-  box-sizing: border-box;
+}
+.main {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -700,6 +704,51 @@
       //-webkit-transform: scale3d(0.9, 0.9, 1);
     }
   }
+}
+.ky-page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -ms-flex-flow: column;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-flex: 1;
+}
+.ky-header-content {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+.ky-header {
+
+}
+.ky-content {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.ky-footer {
+
 }
 @import "box";
 @import "checkbox";
