--- a/framework/less/box.less
+++ b/framework/less/box.less
@@ -18,6 +18,6 @@
     color: #6d6d72;
     white-space: nowrap;
     text-overflow: ellipsis;
-    text-transform: uppercase;
+    //text-transform: uppercase;
   }
 }
