--- a/framework/less/popup.less
+++ b/framework/less/popup.less
@@ -36,6 +36,7 @@
       height: 44px;
       font-size: 17px;
       width: 100%;
+      .f1;
       text-align: center;
       position: relative;
       &:first-child {
